--- a/DeepLearning.ipynb
+++ b/DeepLearning.ipynb
@@ -6,7 +6,7 @@
     "colab": {
       "name": "DeepLearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOATHrhWIUQnS5DHxxbr0M5",
+      "authorship_tag": "ABX9TyMiv+PpPHLxDeNxQq7gQl7w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -428,7 +428,7 @@
         "outputId": "44735e0c-7fc8-4e22-c994-02a0b454122d"
       },
       "source": [
-        "uploaded"
+        "# uploaded"
       ],
       "execution_count": null,
       "outputs": [
